2010-07-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Update a list of tags to match changes in the HTML5 spec
        https://bugs.webkit.org/show_bug.cgi?id=42791

        Testing makes perfect.

        * html5lib/runner-expected-html5.txt:

2010-07-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        HTMLTreeBuilder needs to update to match new spec behavior for <button>
        https://bugs.webkit.org/show_bug.cgi?id=42233

        Test progression.  There's one regression mixed in here.  I'll
        investigate in the next patch.

        * html5lib/runner-expected-html5.txt:

2010-07-21  Justin Schuh  <jschuh@chromium.org>

        Unreviewed. Build fix.

        Removed comment element for test added with:
        http://trac.webkit.org/changeset/63865

        * svg/custom/use-invalid-html-expected.txt:
        * svg/custom/use-invalid-html.xhtml:

2010-07-21  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        WebKitTestRunner needs to support dumping of scroll position
        https://bugs.webkit.org/show_bug.cgi?id=42514

        * platform/mac-wk2/Skipped: Removed now-passing tests from
        skipped list and moved one miscategorized test.

2010-07-21  Justin Schuh  <jschuh@chromium.org>

        Reviewed by Oliver Hunt.

        Prevent DeleteButtonController enable state from changing when not editing
        https://bugs.webkit.org/show_bug.cgi?id=42659

        * svg/custom/use-invalid-html-expected.txt: Added.
        * svg/custom/use-invalid-html.xhtml: Added.

2010-07-21  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dan Bernstein.

        Some of these layout tests are updated results from the fix for 
        https://bugs.webkit.org/show_bug.cgi?id=42605 New border-
        radius path-based drawing code has some issues with corner-joins. 
        The others have been in need of an update since 